Tue Dec 24 14:13:14 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT: add a refer to URL.

Tue Dec 24 13:48:45 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT: add a document about RGenGC.
	  Reviewed by havenwood.
	  [misc #8962]

	* README.EXT.ja: ditto.

Tue Dec 24 12:11:43 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (RARRAY_ASET): try to avoid compiler warning.
	  [Bug #9287]

Tue Dec 24 05:04:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (setup): should not call
	  Process.groups for Windows.  get rid of many errors introduced by
	  r44364.

Mon Dec 23 18:37:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_ownership_group): new
	  assertion for group ownership.

	* test/fileutils/test_fileutils.rb (test_chown{,_verbose,_noop}):
	  based on the patch by vajrasky (Vajrasky Kok) at
	  [ruby-core:59281].  [Feature #9286]

Mon Dec 23 15:53:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (HAS_EXTRA_STATES): warn extra states only when something
	  differ.  [ruby-core:59254] [Bug #9275]

Mon Dec 23 12:42:13 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c: Have to_h raise on elements that are not key-value pairs
	  [#9239]

	* enum.c: ditto

Mon Dec 23 05:01:55 2013  Zachary Scott  <e@zzak.io>

	* doc/syntax/methods.rdoc: [DOC] Added example for underscore
	  conventions in method names. Also added doc to clarify encoding
	  character set support for Ruby programs and elaborated on defining
	  predicate and bang methods. Based on a patch by @gaurish
	  [Fixes GH-477] https://github.com/ruby/ruby/pull/477

Mon Dec 23 03:18:09 2013  Zachary Scott  <e@zzak.io>

	* doc/ChangeLog-1.9.3: [DOC] Fix typos by @dvsuresh
	  [Fixes GH-485] https://github.com/ruby/ruby/pull/485
	* ext/openssl/ossl_config.c: ditto
	* lib/rss/utils.rb, lib/time.rb: ditto
	* test/ruby/envutil.rb: ditto

Sun Dec 22 23:56:56 2013  Zachary Scott  <e@zzak.io>
